--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
+GoogleService-Info.plist
 # Created by https://www.toptal.com/developers/gitignore/api/macos,xcode,cocoapods,carthage
+#
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,xcode,cocoapods,carthage
 
 ### Carthage ###
