--- a/api-server/demo/src/main/resources/application.yml
+++ b/api-server/demo/src/main/resources/application.yml
@@ -4,3 +4,15 @@ spring:
     url: jdbc:mysql://localhost:3306/koting?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: 12345678
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+
+logging:
+  level:
+    org.hibernate.SQL: debug
+    org.hibernate.type: trace
