--- a/api-server/demo/.gitignore
+++ b/api-server/demo/.gitignore
@@ -28,10 +28,11 @@ out/
 
 ### NetBeans ###
 /nbproject/private/
-/nbbuild/
+/nbbuild
 /dist/
 /nbdist/
 /.nb-gradle/
 
 ### VS Code ###
 .vscode/
+src/test
