--- a/api-server/demo/build.gradle
+++ b/api-server/demo/build.gradle
@@ -25,6 +25,8 @@ dependencies {
 	testImplementation("org.junit.vintage:junit-vintage-engine") {
 		exclude group: "org.hamcrest", module: "hamcrest-core"
 	}
+	testCompile group: 'junit', name: 'junit', version: '4.12'
+	compile group: 'net.nurigo', name: 'javaSDK', version: '2.2'
 }
 
 test {
