--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+SandBox/PhoneLogin/PhoneLogin/API.swift
+
 GoogleService-Info.plist
 # Created by https://www.toptal.com/developers/gitignore/api/macos,xcode,cocoapods,carthage
 #
