--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-SandBox/PhoneLogin/PhoneLogin/API.swift
+API.swift
 
 GoogleService-Info.plist
 # Created by https://www.toptal.com/developers/gitignore/api/macos,xcode,cocoapods,carthage
