add .gitignore local.sh

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,5 @@ DerivedData/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,xcode,cocoapods,carthage
+
+api-server/local.sh
