--- a/api-server/demo/build.gradle
+++ b/api-server/demo/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	}
 	testCompile group: 'junit', name: 'junit', version: '4.12'
 	compile group: 'net.nurigo', name: 'javaSDK', version: '2.2'
+	compile("org.springframework.boot:spring-boot-starter-mail")
 }
 
 test {
