--- a/api-server/demo/src/main/resources/application.yml
+++ b/api-server/demo/src/main/resources/application.yml
@@ -7,6 +7,17 @@ spring:
     url: jdbc:mysql://localhost:3306/koting?serverTimezone=UTC&characterEncoding=UTF-8
     username: root
     password: 12345678
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: lgwl81@gmail.com
+    password: test1234!
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
   jpa:
     hibernate:
