--- a/api-server/demo/src/main/resources/application.yml
+++ b/api-server/demo/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: lgwl81@gmail.com
-    password: test1234!
+    password: ghdghkgud123
     properties:
       mail:
         smtp:
