--- a/api-server/demo/build.gradle
+++ b/api-server/demo/build.gradle
@@ -14,7 +14,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation 'org.projectlombok:lombok:1.18.16'
 	implementation 'junit:junit:4.12'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
