이미지 크롤링 코드 수정완료

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.vscode/*
 GoogleService-Info.plist
 # Created by https://www.toptal.com/developers/gitignore/api/macos,xcode,cocoapods,carthage
 #
