MeetingDetailView 수정, Apply Meeting 구현

--- a/Koting/Podfile
+++ b/Koting/Podfile
@@ -11,4 +11,5 @@ pod 'Alamofire'
 pod 'MaterialComponents/Buttons'
 pod 'PanModal'
 pod 'NVActivityIndicatorView'
+pod 'MaterialComponents/BottomAppBar'
 end
