--- a/Koting/Podfile
+++ b/Koting/Podfile
@@ -12,4 +12,11 @@ pod 'PanModal'
 pod 'NVActivityIndicatorView'
 pod 'MaterialComponents/BottomAppBar'
 pod 'PagingKit'
+
+# For Chat
+pod 'Firebase/Database'
+pod 'Firebase/Core'
+pod 'MessageKit'
+pod 'RealmSwift'
+pod 'SDWebImage'
 end
