--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .vscode/*
+./SandBox		  
 GoogleService-Info.plist
 # Created by https://www.toptal.com/developers/gitignore/api/macos,xcode,cocoapods,carthage
 #
