--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ api-server/demo-0.0.1-SNAPSHOT.jar
 api-server/nohup.out
 .vscode/*
 GoogleService-Info.plist
+koting-ios-firebase-adminsdk-zbh1u-d98f39af3c.json
